<resources>
    <string name="app_name">IndoorNav</string>
    <string name="destination_label">Destination</string>
    <string name="no_stairs">Avoid Stairs?</string>
    <string name="ac_confirm">You are in the Academic Center.\nWhere would you like to navigate to?</string>
    <string name="settings">Settings</string>
    <string name="next_step">Next Step</string>
    <string name="arrive">Arrive</string>
    <string-array name="stairsRoute">
        <item>Exit the room to the left</item>
        <item>Turn left into the hallway</item>
        <item>Take staircase on right</item>
        <item>Go to fourth floor (2 floors)</item>
        <item>Turn to head down the hallway</item>
        <item>Continue to first alcove</item>
        <item>Turn into the alcove towards the first door on the right</item>
    </string-array>
    <string-array name="elevRoute">
        <item>Exit the room to the left</item>
        <item>Enter the elevator on the right</item>
        <item>Go to fourth floor</item>
        <item>Exit elevator and turn left</item>
        <item>Continue down the hallway</item>
    </string-array>
    <string-array name="acRooms">
        <item>AC 102 — Seminar Room</item>
        <item>AC 104 — Laser Cutting Room</item>
        <item>AC 105 — Machine Shop</item>
        <item>AC 106 — Machine Shop</item>
        <item>AC 109 — QEA Room</item>
        <item>AC 113 — QEA Room</item>
        <item>AC 126 — Classroom</item>
        <item>AC 128 — Classroom</item>
        <item>AC 129 — Shop</item>
        <item>AC 202 — Seminar Room</item>
        <item>AC 204 — Design Studio</item>
        <item>AC 206 — Design Studio</item>
        <item>AC 209 — Design Studio</item>
        <item>AC 213 — Design Studio</item>
        <item>AC 218 — SCOPE Room</item>
        <item>AC 225 — Faculty Research Space</item>
        <item>AC 226 — SCOPE Room</item>
        <item>AC 228 — RoboLab</item>
        <item>AC 302 — ECE Stockroom</item>
        <item>AC 304 — POE Room</item>
        <item>AC 305 — Seminar Room</item>
        <item>AC 306 — POE Room</item>
        <item>AC 309 — POE Room</item>
        <item>AC 313 — Classroom</item>
        <item>AC 318 — Classroom</item>
        <item>AC 325 — EduKitchen</item>
        <item>AC 326 — Classroom</item>
        <item>AC 326a — Lab</item>
        <item>AC 327 — EduSpace</item>
        <item>AC 328 — Classroom</item>
        <item>AC 329 — Lab</item>
        <item>AC 404 — Bio Lab</item>
        <item>AC 406 — Bio Lab</item>
        <item>AC 409 — Lab</item>
        <item>AC 413 — Lab</item>
        <item>AC 416 — Faculty Research Space</item>
        <item>AC 417 — Classroom</item>
        <item>AC 426 — MatSci Lab</item>
        <item>AC 427 — SEM Room</item>
        <item>AC 428 — ISIM Classroom</item>
    </string-array>
    <string name="continueDown4thFloor">Continue down the hallway</string>
    <string name="stairs">stairs</string>
    <string name="continueAfterStairs">after stairs</string>
    <string name="elevator">Enter the elevator on the right</string>
    <string name="inElevator">Go to fourth floor</string>
    <string name="exitRoom">Exit the room to the left</string>
    <string name="leftFromElevator">Exit elevator and turn left</string>
    <string name="leftFromWrongDoor">Go to hallway and turn left</string>
    <string name="turnAroundStairs">Turn to head down the hallway</string>
    <string name="turnAroundRoom">Turn into the alcove towards the first door on the right</string>
    <string name="leftFromStudio">Turn left into the hallway</string>
    <string name="title_activity_settings">Settings</string>
    <string name="cancel">Cancel Navigation</string>
    <string name="go">Go</string>

    <!-- Strings related to Settings -->

    <!-- Example General settings -->
    <string name="pref_header_general">General</string>

    <string name="pref_title_social_recommendations">Enable social recommendations</string>
    <string name="pref_description_social_recommendations">Recommendations for people to contact
        based on your message history
    </string>

    <string name="pref_title_display_name">Display name</string>
    <string name="pref_default_display_name">John Smith</string>

    <string name="pref_title_add_friends_to_messages">Add friends to messages</string>
    <string-array name="pref_example_list_titles">
        <item>Always</item>
        <item>When possible</item>
        <item>Never</item>
    </string-array>
    <string-array name="pref_example_list_values">
        <item>1</item>
        <item>0</item>
        <item>-1</item>
    </string-array>

    <!-- Example settings for Data & Sync -->
    <string name="pref_header_data_sync">Data &amp; sync</string>

    <string name="pref_title_sync_frequency">Sync frequency</string>
    <string-array name="pref_sync_frequency_titles">
        <item>15 minutes</item>
        <item>30 minutes</item>
        <item>1 hour</item>
        <item>3 hours</item>
        <item>6 hours</item>
        <item>Never</item>
    </string-array>
    <string-array name="pref_sync_frequency_values">
        <item>15</item>
        <item>30</item>
        <item>60</item>
        <item>180</item>
        <item>360</item>
        <item>-1</item>
    </string-array>

    <string-array name="list_preference_entries">
        <item>Entry 1</item>
        <item>Entry 2</item>
        <item>Entry 3</item>
    </string-array>

    <string-array name="list_preference_entry_values">
        <item>1</item>
        <item>2</item>
        <item>3</item>
    </string-array>

    <string-array name="multi_select_list_preference_default_value" />

    <string name="pref_title_system_sync_settings">System sync settings</string>

    <!-- Example settings for Notifications -->
    <string name="pref_header_notifications">Notifications</string>

    <string name="pref_title_new_message_notifications">New message notifications</string>

    <string name="pref_title_ringtone">Ringtone</string>
    <string name="pref_ringtone_silent">Silent</string>

    <string name="pref_title_vibrate">Pocket Mode</string>
    <string name="title_home">Home</string>
    <string name="title_dashboard">Dashboard</string>
    <string name="title_notifications">Notifications</string>
    <string name="stairs_time_est">Time: 3 minutes</string>
    <string name="stairs_dist_est">Distance: 500ft</string>
    <string name="stairs_option">Stairs</string>
    <string name="elev_option">Elevator</string>
    <string name="elev_distance_est">Distance: 200ft</string>
    <string name="elev_time_est">Time: 5 minutes</string>
    <string name="vibrate">Vibrate</string>
    <string name="title_activity_route_options">Route Options</string>
    <string name="arrived">You have arrived!</string>
    <string name="finish">Finish</string>
</resources>
