<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <item
        android:id="@+id/navigation_stairs"
        android:icon="@drawable/stairs_icon"
        android:title="@string/stairs_option"
        android:enabled="true"
        app:showAsAction="ifRoom"/>

    <item
        android:id="@+id/navigation_elev"
        android:icon="@drawable/elevator_icon"
        android:title="@string/elev_option"
        android:enabled="true"
        app:showAsAction="ifRoom"/>

    <item
        android:id="@+id/navigation_go"
        android:icon="@drawable/ic_arrow_forward_black_24dp"
        android:title="@string/go"
        android:enabled="true"
        app:showAsAction="ifRoom"/>

</menu>
